apply plugin: 'base'
apply plugin: 'idea'
apply plugin: 'build-time-tracker'

buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.11.+"
        classpath 'io.spring.gradle:dependency-management-plugin:1.1.7'
    }
}

buildtimetracker {
    reporters {
        summary {
            ordered false
            threshold 50
            barstyle "unicode"
        }
    }
}

subprojects {
    group "com.microting"
    version "1.1"

    apply plugin: "java-library"
    apply plugin: "io.spring.dependency-management"

    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.junit:junit-bom:5.10.2"
        }

        dependencies {
            dependency 'net.sf.jasperreports:jasperreports:7.0.3'
            dependency 'net.sf.jasperreports:jasperreports-pdf:7.0.3'
            dependency 'net.sf.jasperreports:jasperreports-excel-poi:7.0.3'
            dependency 'net.sf.jasperreports:jasperreports-xalan:7.0.3'
            dependency 'commons-io:commons-io:2.19.0'
            dependency 'xalan:xalan:2.7.3'
            dependency 'org.apache.poi:poi:5.4.1'
            dependency 'org.apache.logging.log4j:log4j-1.2-api:2.24.3'
            dependency 'org.apache.logging.log4j:log4j-core:2.24.3'
            dependency 'org.apache.commons:commons-lang3:3.19.0'
        }
    }

    println "moduleName: ${it.name}"
}

wrapper {
    distributionUrl = 'https://services.gradle.org/distributions/gradle-8.12-bin.zip'
}